fix: time of visibility

--- a/blocks/modal/__overlay/_background_dark/modal__overlay_background_dark.css
+++ b/blocks/modal/__overlay/_background_dark/modal__overlay_background_dark.css
@@ -1,9 +1,11 @@
 @keyframes showOn {
-  from {opacity: 0;}
-  to {opacity: 1;}
+  from {opacity: 0;
+        visibility: hidden;}
+  to {opacity: 1;
+      visibility: visible;}
 }
 
 .modal__overlay_background_dark {
   opacity: 0.9;
-  animation: showOn 1s linear; 
+  animation: showOn 0.4s ease; 
 }
