--- a/blocks/zoom/_animation/_close/zoom_animation_close.css
+++ b/blocks/zoom/_animation/_close/zoom_animation_close.css
@@ -1,12 +1,14 @@
 
 @keyframes showOff {
-  from {opacity: 1;}
+  from {opacity: 1;
+        visibility: visible;}
         
-  to {opacity: 0;}
+  to {opacity: 0;
+      visibility: hidden;}
     
 }
 
 .zoom_animation_close {
-  -moz-animation: showOff 1s linear;
-  animation: showOff 1s linear; 
+  -moz-animation: showOff .5s ease;
+  animation: showOff .5s ease; 
 }
